--- a/doc/tex/BBBar.tex
+++ b/doc/tex/BBBar.tex
@@ -1,4 +1,10 @@
-\section{DM production with $b\bar{b}$}
+\svnidlong
+{$HeadURL$}
+{$LastChangedDate$}
+{$LastChangedRevision$}
+{$LastChangedBy$}
+\svnid{$Id: $}
+
 \label{sec:ttdm}
 
 In some theoretically motivated scenario (e.g. for high $tan\beta$ in the pMSSM ), 
@@ -28,18 +34,20 @@ The PDF used to calculate these cross section is NNPDF3.0 (lhaid 263000).
 \textbf{[TODO: The following figures are placeholders for now and will be added later]}.
 
 \begin{figure}
+  \vbox{\hfill}
   \caption{Comparison of the subleading jet $p_T$ and $b$-jet multiplicity
     for $bb$+DM scalar model generated in the 4-flavour (left) and 5-flavour (right)
     schemes, respectively}
 \end{figure}
 
 \begin{figure}
-
+    \vbox{\hfill}
     \caption{\label{fig:bbscanPhi} Example of the dependence of the kinematics on the scalar mediator mass. 
     	The Dark Matter mass is fixed to be $1 {\rm GeV}$.}
 \end{figure}
 
 \begin{figure}[!ht]
+    \vbox{\hfill}
     \caption{\label{fig:bbscanPhiPseudo} Example of the dependence of the kinematics on the pseudoscalar mediator mass. 
     	The Dark Matter mass is fixed to be $1 {\rm GeV}$.}
 \end{figure}
