--- a/doc/tex/EWSpecificModels.tex
+++ b/doc/tex/EWSpecificModels.tex
@@ -54,7 +54,7 @@ Section~\ref{subsec:MonojetLikeModels}.
 \end{figure}
 
 %
-The models considered can be divided in four categories:
+The models considered can be divided into four categories:
 \begin{description}
  \item[Models including a contact operator, where the boson is radiated from the initial state] As depicted in
  the left diagram of Figure~\ref{fig:VPlusMET_EFT}, these models follow the nomenclature and theory
