--- a/doc/tex/EWSpecificModels_SVMediators.tex
+++ b/doc/tex/EWSpecificModels_SVMediators.tex
@@ -1,4 +1,12 @@
-Searches in the jet+MET final state are generally more sensitive
+\svnidlong
+{$HeadURL: $}
+{$LastChangedDate: $}
+{$LastChangedRevision: $}
+{$LastChangedBy: $}
+\svnid{$Id: $}   
+
+
+Monojet searches are generally more sensitive
 with respect to final states including bosons, due to the much
 larger rates of signal events featuring quark or gluon radiation with
 respect to radiation of bosons~\cite{Zhou:2013fla},
@@ -6,10 +14,11 @@ in combination with the low branching ratios if leptons from
 boson decays are required in the final state.
 The rates for the Higgs boson radiation is too low for these models
 to be considered a viable benchmark~\cite{Carpenter:2013xra}.
-However, the presence of photons
-leptons from W and Z decays
+However, the presence of photons,
+leptons from W and Z decays,
 and W or Z bosons decaying hadronically
-allows to reject the background more effectively, making Z/gamma/W+MET searches
+allow backgrounds to be rejected more effectively,
+making Z/gamma/W+MET searches
 still worth comparing with searches in the jet+MET final state.
 %TODO: Linda is writing sentence to make this stronger. 
 
@@ -23,10 +32,11 @@ still worth comparing with searches in the jet+MET final state.
 
 \subsection{Vector mediator exchanged in the s-channel}
 
-The case for searches with W bosons in the final state has so far been strenghtened by the
-presence of particular choices of couplings between the WIMP and the up and
-down quarks which enhance W radiation~\cite{Bai:2012xg}, in the case of the exchange
-of a vector mediator in the s-channel.
+An example Feynman diagam for these processes can be constructed by taking
+Fig.~\ref{fig:OP} and replacing the gluon with $\gamma,W$ or $Z$.
+The interest for searches with W bosons in the final state
+has been elevated by the increased cross section
+for certain choices of couplings for a spin-1 mediator~\cite{Bai:2012xg}.
 Run-1 searches have considered three sample cases for the product of
 up and down quark couplings to the mediator $\xi$:
 \begin{itemize}
@@ -50,12 +60,13 @@ We leave the study of further models with cross-section enhancements due
 to different couplings to up and down quarks for studies beyond the early LHC searches
 covered in this document.
 An example of such model is the case of both DM and SM Higgs charged under a new U(1)',
-with a a small mass mixing between SM Z-boson and the new Zprime. This leads
+with a a small mass mixing between SM Z-boson and the new $Z^\prime$. This leads
 to different effective DM couplings to $u_L$ and $d_L$, proportional to
 their coupling to the Z boson, detailed in Appendix~\ref{app:EWSpecificModels_Appendix}.
 
 The scan in the parameters that characterize this simplified model for EW boson + MET
-searches follow what already detailed in Section~\ref{subsec:MonojetLikeModels}.
+searches follow what is
+already detailed in Section~\ref{subsec:MonojetLikeModels}.
 %FIXME: refer to appropriate subsection
 
 % CD: I tend to like this list so I'll leave it here in hope of recycling it
@@ -126,9 +137,11 @@ benchmark points are shown in Appendix~\ref{app:EWSpecificModels_Appendix}.
 	\label{fig:DMV_EW_kinematics}
 \end{figure}
 
-\subsection{Colored scalar mediator exchanged in the s-channel}
+\subsection{Colored scalar mediator exchanged in the t-channel}
 
-The model parameters with emission of an EW boson follow those in Section~\ref{subsec:MonojetLikeModels}.
+The model parameters with emission of an EW boson follow those in Section~\ref{subsec:MonojetLikeModels}.   A representative Feynman diagram can be
+constructed by replacing a gluon in Fig.~\ref{fig:tchannelMonojet}
+with a $\gamma,W,Z$ boson.
 
 Figure~\ref{fig:TChan_EW_Zhad_MET} shows the MET distribution for the hadronic Z+MET final state, 
 with varying dark matter and mediator mass, before any selection. 
