--- a/doc/tex/SingleTop.tex
+++ b/doc/tex/SingleTop.tex
@@ -72,7 +72,7 @@ Within this model, two distinct processes can lead to monotop production:
 {
 Feynman diagram of leading order processes leading to monotop events: production of
 a coloured scalar resonance $S$ decaying into a top quark and a spin-$1/2$ fermion $f_{met}$ (a),
-$s-$ (b) and $t$-channel (b) non resonant production of a top quark in association with
+$s-$ (b) and $t$-channel (c) non resonant production of a top quark in association with
 a spin-1 boson $v_{met}$.
 %Feynman diagram of leading order processes leading to monotop events: resonant production of
 %$t$ via resonant new particle $M$ decaying into a top quark and $\Xnew$, which is the dark matter fermion $\chi$ (left),
@@ -143,7 +143,11 @@ in flavor space.
 % \com{Question/comment: in this resonant model, this is not so obvious to interpret $\phi_{\pm}$ as the new particle since there is a vertex $\phi-u-\chi$.
 % It is somehow breaking the concept of having a dark sector weakly coupled to ordinary matter via a new particle.}
 In the following, we only consider the model with a new colored scalar, as the requirement of invariance
-under $SU(2)_L X U(1)_Y$ would require the introduction of further particles in the case of a new colored vector~\cite{Boucheneb:2014wza}.
+under $SU(2)_L \times U(1)_Y$ would require the introduction of further particles in the case of a new colored vector~\cite{Boucheneb:2014wza}.
+Note that the resulting model can be likened to the MSSM with
+an RPV coupling between a top squark and fermions and an RPC coupling
+between a top squark--top--neutralino.
+
 
 \newthought{Non-Resonant production}
 \label{sec:NonResonantProd}
