--- a/doc/tex/TChannelModels.tex
+++ b/doc/tex/TChannelModels.tex
@@ -1,11 +1,23 @@
+\svnidlong
+{$HeadURL$}
+{$LastChangedDate$}
+{$LastChangedRevision$}
+{$LastChangedBy$}
+\svnid{$Id$}
 
 % text based on initial versions from
 % Amelia Brennan (amelia.jean.brennan@cern.ch),
 % http://arxiv.org/abs/arXiv:1402.2285, 
 % and http://arxiv.org/abs/arXiv:1409.2893
 
-The preceding sections address models containg a Dirac WIMP coupled to the SM through exchange of a neutral vector or scalar mediator in an $s$-channel process. A $t$-channel process may couple the SM and DM directly, leading to a different phenomenology. Under the assumption that $\chi$ is a Standard Model (SM) singlet, the mediating particle, labeled $\phi$, is necessarily charged and coloured. 
-
+The preceding sections address models
+with a Dirac fermion coupled to the SM through exchange of a
+neutral spin-0 or spin-1 in an $s$-channel process.
+A $t$-channel process may couple the SM and DM directly,
+leading to a different phenomenology.
+Here, we examine a model where $\chi$ is a Standard Model (SM) singlet,
+the mediating particle, labeled $\phi$, is charged and coloured, and
+the SM particle is a quark.
 Following the example of Ref.~\cite{Papucci:2014}, the interaction Lagrangian is written as
 
 \begin{equation}
@@ -43,7 +55,7 @@ The minimal width of each mediator is expressed, using the example of decay to a
 					   & \times \sqrt{M_{\phi_i}^4 + m_{u_i}^4 + m_{\chi}^4 - 2M_{\phi_i}^2m_{u_i}^2 - 2M_{\phi_i}^2m_{\chi}^2 - 2m_{u_i}^2m_{\chi}^2} \, ,
 \end{split}
 \end{equation}
-this reduces to 
+which reduces to 
 
 \begin{equation}
 \frac{g_i^2 M_{\phi_i}}{16 \pi} \left(1 - \frac{m_{\chi}^2}{M_{\phi_i}^2} \right)^2
@@ -53,31 +65,54 @@ in the limit $M_{\phi_i}, m_{\chi} \gg m_{u_i}$.
 \vspace{5mm}
 
 The leading-order processes involved in MET+jet production are shown
-in Fig. \ref{fig:tchannelMonojet}. An interesting point of difference
-with the $s$-channel simplified models is that the mediator can
-radiate a SM object, such as a jet or gauge boson. The forum has also
-studied MET+$Z$ production where, in diagrams of the first type, one
-of the initial quarks radiates $Z$ boson instead of a gluon, or the
-boson is radiated off the internal scalar line \todo{cite published
-  ATLAS analysis}. This model can also give a signal in the di-jet +
+in Fig. \ref{fig:tchannelMonojet}.
+Note that the generation index for $\phi$ is linked to the incoming
+fermion(s).   Thus, mono-jet production via $\phi^3_u$ is not possible at
+this order, while production through $\phi^3_d$ is suppressed by
+the $b$ parton PDF.
+This model can also give a signal in the di-jet +
 MET channel when, for example, the $\chi$ is exchanged in the
 $t$-channel and the resulting $\phi$ pair each decay to a jet +
 $\chi$. Fig.~\ref{tchannelDijet} shows the leading order diagrams.
+Except for the $gg$ induced process, di-jet production
+through $\phi^3_u$ is not possible, and production through $\phi^3_d$ is
+again suppressed.   The diagram involving the t-channel exchange
+of $\chi$ is strongly dependent upon the Dirac fermion assumption.
+For a Majorana fermion, $q\bar q,\bar q\bar q,$ and $qq$ production
+would be possible with the latter having a pronounced enhancement
+at the LHC.
 
-The model is parallel to, and partially motivated by, the squark of
-the MSSM, but in this case the $\chi$ is chosen to be Dirac as
-above. A second, crucial different with respect to the MSSM is the
-contribution from diagrams involving the exchange or production of a
-single squark $\phi$ and the importance of off-shell $\phi$. Searches for
-supersymmetry signals are typically optimised for squark pair
-production, since the equvialent of the DM coupling $g$ is constrained
-to be very small within the MSSM. In the more general theories
+
+%% An interesting point of difference
+%% with the $s$-channel simplified models is that the mediator can
+%% radiate a SM object, such as a jet or gauge boson. The forum has also
+%% studied MET+$Z$ production where, in diagrams of the first type, one
+%% of the initial quarks radiates $Z$ boson instead of a gluon, or the
+%% boson is radiated off the internal scalar line \todo{cite published
+%%   ATLAS analysis}. 
+
+This model is similar to the MSSM with only light squarks and
+a neutralino, except for two distinct points:  the $\chi$ is
+a Dirac fermion and the coupling $g$ is not limited to be
+weak scale.
+In the MSSM, most of these processes are sub-dominant, even
+if resonantly enhanced, because the production is proportional
+to weak couplings.
+%SM: not true.  Little explicit optimization.
+%% A second, crucial different with respect to the MSSM is the
+%% contribution from diagrams involving the exchange or production of a
+%% single squark $\phi$ and the importance of off-shell $\phi$. Searches for
+%% supersymmetry signals are typically optimised for squark pair
+%% production, since the equvialent of the DM coupling $g$ is constrained
+%% to be very small within the MSSM.
+In the more general theories
 considered here, $g$ is free to take on large values of order 1 or
 more, and thus diagrams neglected in MSSM simulation can occur at a
 much higher rate here. While constraints from SUSY jets+MET analyses
 on these models should be translated to this model, LHC experiments
-should also study analyses directly optimized for the diagrams which
-are relevant for large $g$.
+should also test their sensitivity to them.
+%study analyses directly optimized for the diagrams which
+%are relevant for large $g$.
 
 \begin{figure}
   \unitlength=0.0043\linewidth
