--- a/doc/tex/MonojetLikeModels_Appendix.tex
+++ b/doc/tex/MonojetLikeModels_Appendix.tex
@@ -1,3 +1,44 @@
+\section{Implementation of s-channel models}
+
+There are several matrix element implementations of the
+DM production through spin-0 and spin-1 mediators.
+
+For a spin-1 mediator, the implementation in POWHEG generates
+DM pair production with 1 parton at next-to-leading order (NLO), whilst MADGRAPH and MCFM are at leading order (LO). As shown in POWHEG Ref.\,\cite{Haisch:2013ata}, including NLO corrections result in an enhancement in the cross section as compared to LO and though this is not significant, it does lead to a substantial reduction in the dependence on the choice of the renormalization and factorization scale and hence the theoretical uncertainty on the signal prediction. 
+Since NLO calculations are available for the process in POWHEG, we recommend to proceed with POWHEG as the generator of choice. 
+
+For a spin-0 mediator, the top-quark loop is the most important
+consideration.
+The matrix element implementation of the s-channel spin-0 mediated DM production is available in POWHEG with the full top-loop calculation at LO\,\cite{Haisch:2015ioa}.
+The POWHEG implementation includes the finite
+top quark mass dependence for DM pair production with 1 parton at LO.
+For consistency with the spin-1 generation, we recommend using POWHEG
+for this case as well.
+
+
+Here, we document some specific settings for the Dark Matter models
+needed to run the POWHEG generation:
+\begin{itemize}
+\item The POWHEG implementation allows to generate a single sample that provides sufficient statistics in all signal regions. %by optimizing the following two parameters:
+%\begin{itemize}
+POWHEG generates weighted events and the \verb+bornsuppfact+ parameter is used to set the event suppression factor according to
+\begin{equation}
+F(k_{\rm{T}})=\frac{k_{\rm{T}}^2}{k_{\rm{T}}^2+\texttt{bornsuppfact}^2} \;.
+\end{equation}
+In this way, the events at, for instance low $\MET$, are suppressed and receive higher event weights which ensures higher statistics at high $\MET$. We recommend to set \verb+bornsuppfact+ to 1000.
+\item The \verb+bornktmin+ parameter allows to suppress the low $\MET$ region even further by starting the generation at a certain value of $k_{\rm{T}}$. It is recommended to set this parameter  to half the lower analysis $\MET$ cut, for the event selection used in the CMS/ATLAS monojet analyses for instance the proposed value for \verb+bornktmin+ is 150. However, this parameter should be set keeping in mind the event selection of all the analyses that will use these signal samples and hence a threshold lower than 150 may be required. 
+%\end{itemize}
+
+\item Set \verb+runningwidth+ to 0.
+\item Set \verb+mass_low+ and \verb+mass_high+ to -1.
+\item The minimal values for \verb+ncall1+, \verb+itmx1+, \verb+ncall2+, \verb+itmx2+ are 250000, 5, 1000000, 5 for the DMV model, respectively. In order to increase speed, set \verb+foldsci+ and \verb+foldy+ to 2 and keep \verb+foldphi+ at 1. 
+\item The minimal values for \verb+ncall1+, \verb+itmx1+, \verb+ncall2+, \verb+itmx2+ are 100000, 5, 100000, 5 for the DMS\_tloop model, respectively.
+\item Allow negative weights for the DMV model by setting \verb+withnegweights+ to 1.
+\item Since the DMS\_tloop model is a leading order process, set \verb+LOevents+ and \verb+bornonly+ are set to 1 internally.
+\item Automatic calculation of systematic uncertainties associated with the choice of hard scale and PDFs.
+\end{itemize}
+{\bf [Comment on proper PDF sets to use, concerns about sea quark PDF in b-initiated diagrams (perhaps the latter belongs in the b-flavored DM section]}
+
 
 \section{CKKW parton matching implementation}
 \label{sec:monojet_parton_match}
@@ -173,3 +214,50 @@ Here the 0-, 1-, 2- and 3-parton emissions are generated separately and requeste
 \end{figure}
 
 With the ATLAS run-I baseline cut (MET and leading jet $p_{T}$ larger than 250 GeV, less than 4 jets), the 0+1 parton emission has 17.4\% yield less compared to 0+1+2+3 parton emission, while the 0+1+2 has 2.2\% less. With MET$>$400 GeV, 0+1 parton emission has 16.8\% yield less and 0+1+2 parton emission has 2.4\% less compared to 0+1+2+3 parton emission. With MET$>$600 GeV, 0+1 parton emission has 16.5\% yield less and 0+1+2 parton emission has 2.9\% less compared to 0+1+2+3 parton emission. The same numbers hold if a sysmetric cut is added on leading jet transverse momentum.
+
+
+\section{Model implementation for mono-Higgs models}
+
+All three Higgs+MET models are generated at leading
+order with MadGraph 2.2.2, using Pythia8 for the parton shower.
+The MadGraph implementations of the scalar and vector models can be found on the Forum SVN 
+repository~\cite{ForumSVN_EWMonoHiggs}, while the 2HDM model can be found
+at this link~\cite{ForumSVN_EWMonoHiggs_2HDM}.
+
+In all cases, it is recommended not to handle the $h$ decay through MadGraph as
+it does not include the proper $h$ branching ratios, or, if using MadGraph, then the 
+resulting cross section should be rescaled to match onto the correct branching ratio.
+
+\newthought{Madgraph details for scalar mediator Higgs+MET model}
+
+In this model, the contribution from the $gghS$ box is included through an effective 
+Lagrangian evaluated in the large $m_t$ limit. 
+This may overestimate the rates of the $h + \missET$ signal~\cite{Haisch:2012kf}, but a full evaluation
+is left to future studies. 
+
+\newthought{Madgraph details for 2HDM Higgs+MET model}
+  
+ The two couplings that can be changed in the Madgraph model follow the nomenclature below:
+ \begin{itemize}
+ 	\item \texttt{Tb} - $\tan \beta$
+ 	\item \texttt{gz} - $g_z$, gauge coupling of $Z^\prime$ to quarks
+ \end{itemize}
+ The other couplings are not changed, including \texttt{gx} (the $A \bar \chi \chi$ coupling) which has little impact on the signal. 
+ $\sin \alpha$ is fixed internally such that $\cos (\beta-\alpha) = 0$. 
+ The width of the $Z^\prime$ and $A$ can be computed automatically within Madgraph. 
+ The couplings here don't affect the signal kinematics, so they can be fixed to default values 
+ and then the signal rates can be scaled appropriately. 
+ 
+The nomenclature for the masses in the Madgraph model is:
+ \begin{itemize}
+ 	\item \texttt{MZp} - PDG ID 32 - $Z^\prime$
+ 	\item \texttt{MA0} - PDG ID 28 - $A$
+ 	\item \texttt{MX} - PDG ID 1000022 - dark matter particle
+ \end{itemize}
+ 
+The other masses are unchanged and do not affect the result. 
+ Both $Z^\prime \to hZ(\bar \nu \nu)$ and  $Z^\prime \to hA(\bar \chi \chi)$ contribute to the final state, scaling
+ different with model parameters. We recommend to generate them separately, 
+ and then add the two signal processes together weighted by cross sections.
+ % These signals should be generated separately since they have different $\tan \beta, M_A$ dependence.  
+ 
