--- a/doc/tex/EWSpecificModels_EFT.tex
+++ b/doc/tex/EWSpecificModels_EFT.tex
@@ -1,3 +1,10 @@
+\svnidlong
+{$HeadURL: $}
+{$LastChangedDate: $}
+{$LastChangedRevision: $}
+{$LastChangedBy: $}
+\svnid{$Id: $}   
+
 % +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 % Linda 11/5/2015
 % +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
@@ -5,7 +12,12 @@
 A complete list of effective operators with direct DM/boson couplings for
 Dirac DM, up to dimension 7, can be found in~\cite{Cotta:2012nj, Carpenter:2012rg, Crivellin:2015wva}. 
 Higher dimensional operators, up to dimension 8, leading to Higgs+MET signatures,
-are mentioned in~\cite{Carpenter:2012rg, Berlin:2014cfa}. 
+are mentioned in~\cite{Carpenter:2012rg, Berlin:2014cfa}.
+Despite the appearance of simplified models, we argue that
+the model independent approach of the EFTs is still relevant.
+Furthermore, not all EFT operators have a simplified model
+replacement.
+
 
 %%%%%%%%%%%Dimension 5 operators
 \subsection{Dimension 5 operators}
@@ -65,8 +77,9 @@ kinematics of this model can be approximated by that of a simplified model inclu
 a high-mass scalar mediator exchanged in the s-channel. For this reason, 
 the list of benchmark models with direct boson-DM couplings for photon, Z and W 
 only includes dimension 7 operators: the scalar model with initial state radiation of an EW boson
-is already recommended and its results can be rescaled. The Higgs+MET analysis
-however will to use this model, as it would not be sensitive to a scalar mediator model. 
+is already recommended and its results can be rescaled. The Higgs+MET analysis,
+however, will not use this model,
+as it would not be sensitive to a scalar mediator model. 
 
 \begin{figure}
 	\includegraphics[width=0.6\textwidth]{figures/EW/pt_vv2_xxDHDH_vs_ScalarMediator.pdf}
